[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyls"
version = "0.1.0"
description = "A Python implementation of the ls command"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = []
readme = "README.md"

[project.scripts]
pyls = "pyls:main"